use lunr and cheerio

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "socket.io": "*",
     "request" : "*",
     "feedparser" : "*",
-    "string": "*"
+    "string": "*",
+    "lunr" : "*"
   },
   "devDependencies": {},
   "scripts": {
